# plotty

./: CMakeLists.txt
src/: mpl_example_node.cpp
